Commented some parts of the code

--- a/mockup/html/adm.html
+++ b/mockup/html/adm.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
+<!-- This page cannot be accessed through any links from index and other pages, please open it separately. -->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
@@ -21,11 +21,14 @@
     <header class="p-3 bg-info text-white">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <!-- Paw logo -->
                 <a href="../index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Logo">
                         <img id="headerLogo" src="../images/logos/paw.svg" />
                     </svg>
                 </a>
+
+                <!-- Page links -->
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="../index.html" class="nav-link px-2">Home</a></li>
                     <li><a href="accessories.html" class="nav-link px-2">Accessories</a></li>
@@ -36,6 +39,7 @@
                 <!-- Center logo -->
                 <img class="navbar-brand d-none d-xl-block" src="../images/logos/Shop-do-Pet.svg" alt="Shop do Pet Logo">
 
+                <!-- Login and Sing Up buttons and Cart icon  -->
                 <div class="text-end">
                     <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
@@ -45,8 +49,9 @@
     </header>
 
     <!-- Content -->
+    <!-- First row -->
     <div class="container px-4 py-5">
-        <h2 class="pb-2 border-bottom">Hello Ademir, what do you want to do?</h2>
+        <h2 class="pb-2 border-bottom">Hello ADM, what do you want to do?</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
                 <div class="feature-icon bg-primary bg-gradient">
@@ -63,8 +68,8 @@
                 <div class="feature-icon bg-primary bg-gradient">
                     <img id="icons" src="../images/adm/group.svg">
                 </div>
-                <h2>Manage Ademirs</h2>
-                <p>Add or remove adms to help you manage the store.</p>
+                <h2>Manage ADMs</h2>
+                <p>Add or remove ADMs to help you manage the store.</p>
                 <a href="#" class="btn btn-primary">
                     Go Now!
                 </a>
@@ -82,8 +87,10 @@
         </div>
     </div>
 
+    <!-- Just a styled rectangle -->
     <div class="divider"></div>
 
+    <!-- Second row -->
     <div class="container px-4 py-5">
         <h2 class="pb-2 border-bottom">Manage Products</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
