--- a/mockup/html/cats.html
+++ b/mockup/html/cats.html
@@ -21,11 +21,14 @@
     <header class="p-3 bg-info text-white">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <!-- Paw logo -->
                 <a href="../index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Logo">
                         <img id="headerLogo" src="../images/logos/paw.svg" />
                     </svg>
                 </a>
+
+                <!-- Page links -->
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="../index.html" class="nav-link px-2">Home</a></li>
                     <li><a href="accessories.html" class="nav-link px-2">Accessories</a></li>
@@ -36,6 +39,7 @@
                 <!-- Center logo -->
                 <img class="navbar-brand d-none d-xl-block" src="../images/logos/Shop-do-Pet.svg" alt="Shop do Pet Logo">
 
+                <!-- Login and Sing Up buttons and Cart icon  -->
                 <div class="text-end">
                     <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
@@ -45,7 +49,7 @@
         </div>
     </header>
 
-    <!-- Top -->
+    <!-- Top banner-->
     <div id="catPhoto">
         <section class="py-5 text-center container">
             <div class="row py-lg-5">
@@ -62,16 +66,18 @@
 
     <!-- Products -->
     <div class="album py-5 bg-light">
+        <!-- Product grid, alot o repetitive code-->
         <div class="container">
-
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                 <div class="col">
                     <div class="card shadow-sm">
+                        <!-- Product Thumbnail -->
                         <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
                             <title>Placeholder</title>
                             <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
                         </svg>
 
+                        <!-- Product name/description, view and add to cart buttons and price -->
                         <div class="card-body">
                             <p class="card-text">Product description</p>
                             <div class="d-flex justify-content-between align-items-center">
@@ -84,6 +90,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- aaaaaand repeat -->
                 <div class="col">
                     <div class="card shadow-sm">
                         <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
