--- a/mockup/html/login.html
+++ b/mockup/html/login.html
@@ -21,11 +21,14 @@
     <header class="p-3 bg-info text-white">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <!-- Paw logo -->
                 <a href="../index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Logo">
                         <img id="headerLogo" src="../images/logos/paw.svg"/>
                     </svg>
                 </a>
+
+                <!-- Page links -->
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="../index.html" class="nav-link px-2">Home</a></li>
                     <li><a href="accessories.html" class="nav-link px-2">Accessories</a></li>
@@ -36,6 +39,7 @@
                 <!-- Center logo -->
                 <img class="navbar-brand d-none d-xl-block" src="../images/logos/Shop-do-Pet.svg" alt="Shop do Pet Logo">
 
+                <!-- Login and Sing Up buttons -->
                 <div class="text-end">
                     <a href="#"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
@@ -48,7 +52,6 @@
 
         <main class="form-signin text-center">
             <form>
-
               <h1 class="h3 mb-3 fw-normal">Login</h1>
 
               <div class="form-floating">
