--- a/mockup/index.html
+++ b/mockup/index.html
@@ -21,12 +21,14 @@
     <header class="p-3 bg-info text-white">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <!-- Paw logo -->
                 <a href="" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Logo">
                         <img id="headerLogo" src="images/logos/paw.svg" />
                     </svg>
                 </a>
 
+                <!-- Page links -->
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="" class="nav-link px-2 fw-bold">Home</a></li>
                     <li><a href="html/accessories.html" class="nav-link px-2">Accessories</a></li>
@@ -37,6 +39,7 @@
                 <!-- Center logo -->
                 <img class="navbar-brand d-none d-xl-block" src="images/logos/Shop-do-Pet.svg" alt="Shop do Pet Logo">
 
+                <!-- Login and Sing Up buttons and Cart icon  -->
                 <div class="text-end">
                     <a href="html/login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="html/sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
@@ -54,6 +57,7 @@
             </div>
         </header>
 
+        <!-- Accessories -->
         <div id="accJumbo" class="p-5 mb-4 bg-light border rounded-3">
             <div class="container-fluid py-5 text-white">
                 <h1 class="display-5 fw-bold">Custom Accessories</h1>
@@ -62,7 +66,9 @@
             </div>
         </div>
 
+        <!-- Bottom row -->
         <div class="row align-items-md-stretch">
+            <!-- Dogs -->
             <div class="col-md-6">
                 <div id="dogJumbo" class="h-100 p-5 text-white bg-dark rounded-3">
                     <h2>Dog items</h2>
@@ -70,6 +76,7 @@
                     <a class="btn btn-primary" href="html/dogs.html" role="button">Take me there</a>
                 </div>
             </div>
+            <!-- Cats -->
             <div class="col-md-6">
                 <div id="catJumbo" class="h-100 p-5 bg-light text-white border rounded-3">
                     <h2>Cat items</h2>
