Fixed cart link in Home page

--- a/mockup/index.html
+++ b/mockup/index.html
@@ -43,7 +43,7 @@
                 <div class="text-end">
                     <a href="html/login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="html/sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
-                    <a href="html/"><button type="button" class="btn btn-outline-info me-2"><img src="../mockup/images/logos/cart.svg" id="cartLogo"></button></a>
+                    <a href=""><button type="button" class="btn btn-outline-info me-2"><img src="../mockup/images/logos/cart.svg" id="cartLogo"></button></a>
                 </div>
             </div>
         </div>
